--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.13.0"
   }
 }
