--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "~1.9.1",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "sequelize": "^6.37.3",
+    "uuid": "^10.0.0"
   }
 }
